<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/iv_item_product"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_product"/>

    <TextView
        android:id="@+id/tv_title_flower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/iv_item_product"
        app:layout_constraintTop_toTopOf="@+id/iv_item_product"
        tools:text="Bunga Embun" />

    <TextView
        android:id="@+id/tv_price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/gray_600"
        app:layout_constraintStart_toEndOf="@+id/iv_item_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_flower"
        tools:text="RP 20.000" />

    <ImageButton
        android:id="@+id/ib_minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:src="@drawable/iv_minus"
        android:contentDescription="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/iv_item_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_product" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ib_minus"
        app:layout_constraintStart_toEndOf="@+id/ib_minus"
        app:layout_constraintTop_toTopOf="@+id/ib_minus" />

    <ImageButton
        android:id="@+id/ib_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/add"
        android:src="@drawable/iv_add"
        app:layout_constraintBottom_toBottomOf="@+id/tv_count"
        app:layout_constraintStart_toEndOf="@+id/tv_count"
        app:layout_constraintTop_toTopOf="@+id/tv_count" />

    <ImageButton
        android:id="@+id/ib_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/delete"
        android:src="@drawable/ib_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>