<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dictionary.DictionaryFragment">


    <TextView
        android:id="@+id/tv_title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_know_about_flowers"
        android:textColor="@color/gray_600"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_title_page"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_page" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/scan_with"
        android:textColor="@color/gray_600"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lets" />

    <ImageButton
        android:id="@+id/ib_gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|center_vertical"
        android:layout_margin="8dp"
        android:background="@color/pink_300"
        android:contentDescription="@string/camera"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_dictionary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_gallery"
        app:spanCount="1"
        tools:listitem="@layout/item_dictionary_list">

    </androidx.recyclerview.widget.RecyclerView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_process"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_flower"
        />

</androidx.constraintlayout.widget.ConstraintLayout>