<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:id="@+id/iv_item_product"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_product"/>

    <TextView
        android:id="@+id/tv_title_flower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_item_product"
        app:layout_constraintTop_toTopOf="@+id/iv_item_product"
        tools:text="Bunga Embun" />

    <TextView
        android:id="@+id/tv_price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/iv_item_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_flower"
        tools:text="RP 20.000" />

    <Button
        android:id="@+id/btn_edit_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_item_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_product" />

    <ImageButton
        android:id="@+id/ib_delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:contentDescription="@string/delete"
        android:src="@drawable/ib_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>