<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        tools:context=".ui.auth.register.RegisterFragment"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-128dp">

        <TextView
            android:id="@+id/tv_make_account"
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="26dp"
            android:text="@string/let_s_make_an_account"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/input_name"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:elevation="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name"
            app:placeholderText="sidiq permana">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:elevation="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_username"
            app:placeholderText="sidiq permana">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:elevation="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:elevation="3dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ics_phonee"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_contact"
            app:placeholderText="sidiq permana">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAdress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/ic_place"
                android:drawablePadding="10dp"
                android:elevation="3dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/pink_500"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/edittext_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_address" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/tv_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="@+id/btnToLogin"
            app:layout_constraintEnd_toStartOf="@+id/btnToLogin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnToLogin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/btnToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:text="@string/login_here"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_already"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_process"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_flower"
        />


</androidx.constraintlayout.widget.ConstraintLayout>